src/objects/PF_Project_Item__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>PF_Answers__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_and_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Constraints__c</fullName>
        <label>Constraints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Decision_Details__c</fullName>
        <label>Decision Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Decision_Made__c</fullName>
        <label>Decision Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Identified_Date__c</fullName>
        <label>Open/Identified Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Impact__c</fullName>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Implications__c</fullName>
        <label>Implications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Internal_External__c</fullName>
        <label>Internal/External</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Mitigation_Plan__c</fullName>
        <label>Mitigation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Actions__c</fullName>
        <label>Planned Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realized</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Release__c</fullName>
        <label>Release</label>
        <referenceTo>PF_Release__c</referenceTo>
        <relationshipName>Risk_and_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>PF_Sprints__c</referenceTo>
        <relationshipName>Risk_and_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>PF_Stories__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>Project_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Target_Resolution_Date__c</fullName>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assumption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>PF_Identified_Date__c</columns>
        <columns>PF_Summary__c</columns>
        <columns>PF_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Project Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <recordTypes>
        <fullName>Assumption</fullName>
        <active>true</active>
        <description>To log and track all the Assumptions related to Sprint/Project</description>
        <label>Assumption</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decision</fullName>
        <active>true</active>
        <description>To log and track all the Decision made related to Sprint/Project</description>
        <label>Key Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dependency</fullName>
        <active>true</active>
        <description>To log and track Dependencies related to Sprint/Project</description>
        <label>Dependency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>true</active>
        <description>To log and track Issues related to Sprint/Project</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Question</fullName>
        <active>true</active>
        <description>To log and track Q&amp;A related to Sprint/Project</description>
        <label>Open Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>To log and track Risks related to Sprint/Project</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>